--- a/index.html
+++ b/index.html
@@ -2,24 +2,47 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cocktail API</title>
+    <title>Webseite mit Wetter und Cocktail</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <header>
-        
-    </header>
-    <main>
-        <input type="text" id="searchbar" placeholder="Suche...">
-        <div id="cocktailApp"></div>
+    <nav>
+        <!-- Navigationslinks -->
+    </nav>
 
-    </main>
-    
+    <div id="weatherBlock">
+        <h1>Aktuelles Wetter in Bern</h1>
+        <div id="weatherData"></div>
+    </div>
+
+    <div id="weatherBlock">
+        <h1>Aktuelles Wetter weltweit</h1>
+        <label for="citySelect">Wähle eine Stadt:</label>
+        <select id="citySelect">
+            <option value="https://api.open-meteo.com/v1/forecast?latitude=46.948&longitude=7.447&current=temperature_2m,rain,snowfall,cloud_cover">Bern</option>
+            <option value="https://api.open-meteo.com/v1/forecast?latitude=25.79&longitude=-80.13&current=temperature_2m,rain,snowfall,cloud_cover">Miami</option>
+            <option value="https://api.open-meteo.com/v1/forecast?latitude=46.80&longitude=-71.21&current=temperature_2m,rain,snowfall,cloud_cover">Quebec</option>
+            <option value="https://api.open-meteo.com/v1/forecast?latitude=22.29&longitude=114.15&current=temperature_2m,rain,snowfall,cloud_cover">Hongkong</option>
+            <option value="https://api.open-meteo.com/v1/forecast?latitude=-34.65&longitude=-58.39&current=temperature_2m,rain,snowfall,cloud_cover">Buenos Aires</option>
+        </select>
+        <div id="weatherData"></div>
+    </div>
+
+    <div id="cocktailBlock" style="background-image: url('img/mojito.jpg');">
+        <div id="cocktailImage">
+            <h2 id="cocktailTitle">Cocktailname</h2>
+        </div>
+        <div id="cocktailRecipe">
+            <h3>Rezept:</h3>
+            <p id="recipeDetails">Hier steht das Rezept...</p>
+        </div>
+    </div>
+
     <footer>
-
+        <!-- Footer-Links -->
     </footer>
-    <script src="js/script.js"></script>
 
+    <script src="js/script.js"></script>
 </body>
 </html>
