--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <nav>
+        <a href="index.html">Startseite</a>
+        <a href="about.html">Über uns</a>
+    </nav>
+
     <div id="weatherContainer">
         <div class="weather-column" id="weatherIconContainer">
             <img id="weatherIcon" src="" alt="Wetter-Icon" style="width: 160px; height: 160px;">
