--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <nav>
         <a href="index.html">Startseite</a>
-        <a href="about.html">Über uns</a>
+        <a href="ueberuns.html">Über uns</a>
     </nav>
 
     <div id="weatherContainer">
@@ -38,6 +38,7 @@
         <div id="cocktailTitleContainer">
             <h2 id="cocktailTitle" class="hidden">Cocktailname</h2>
         </div>
+        <img id="cocktailImage" src="cocktail-image.png" alt="Cocktail Image" class="hidden">
         <div id="cocktailRecipeContainer">
             <p id="recipeDetails" class="hidden">Hier steht das Rezept...</p>
         </div>
