--- a/ueberuns.html
+++ b/ueberuns.html
@@ -8,29 +8,24 @@
 <body>
     <nav>
         <a href="index.html">Startseite</a>
-        <a href="about.html">Über uns</a>
+        <a href="ueberuns.html">Über uns</a>
     </nav>
 
     <div id="teamContainer">
         <h1>Unser Team</h1>
         <div class="team-member">
-            <img src="img/member1.jpg" alt="Teammitglied 1" class="team-photo">
-            <h3>Max Mustermann</h3>
+            <img src="img/Paul.jpeg" alt="Teammitglied 1" class="team-photo">
+            <h3>Paul Liebig</h3>
             <p>Position: Geschäftsführer</p>
-            <p>Beschreibung: Max ist unser CEO und sorgt für die strategische Ausrichtung des Unternehmens.</p>
+            <p>Beschreibung: Paul ist einer unserer CEO's und sorgt für die strategische Ausrichtung des Unternehmens.</p>
         </div>
         <div class="team-member">
-            <img src="img/member2.jpg" alt="Teammitglied 2" class="team-photo">
-            <h3>Maria Musterfrau</h3>
-            <p>Position: CTO</p>
-            <p>Beschreibung: Maria leitet die technischen Entwicklungen und Innovationen.</p>
+            <img src="img/Oli.jpeg" alt="Teammitglied 2" class="team-photo">
+            <h3>Oliver Bumann</h3>
+            <p>Position: Geschäftsführer</p>
+            <p>Beschreibung: Oliver leitet die technischen Entwicklungen und Innovationen.</p>
         </div>
-        <!-- Weitere Teammitglieder hier hinzufügen -->
     </div>
-
-    <footer>
-        <!-- Footer-Links -->
-    </footer>
 
     <script src="js/script.js"></script>
 </body>
