Kommentare und Optimierungen

--- a/ueberuns.html
+++ b/ueberuns.html
@@ -6,27 +6,32 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- Navigationsleiste -->
     <nav>
         <a href="index.html">Startseite</a>
         <a href="ueberuns.html">Über uns</a>
     </nav>
 
+    <!-- Teamcontainer -->
     <div id="teamContainer">
         <h1>Unser Team</h1>
+        <!-- Teammitglied Paul -->
         <div class="team-member">
             <img src="img/Paul.jpeg" alt="Teammitglied 1" class="team-photo">
             <h3>Paul Liebig</h3>
-            <p>Position: Geschäftsführer</p>
-            <p>Beschreibung: Paul ist einer unserer CEO's und sorgt für die strategische Ausrichtung des Unternehmens.</p>
+            <p>Cocktailliebhaber</p>
+            <p>Umsetzung aller programmierten Inhalte<br>P.S. Pauls Lieblingscocktail ist der Mojito</p>
         </div>
+        <!-- Teammitglied Oliver -->
         <div class="team-member">
             <img src="img/Oli.jpeg" alt="Teammitglied 2" class="team-photo">
             <h3>Oliver Bumann</h3>
-            <p>Position: Geschäftsführer</p>
-            <p>Beschreibung: Oliver leitet die technischen Entwicklungen und Innovationen.</p>
+            <p>Cocktailliebhaber</p>
+            <p>Umsetzung aller programmierten Inhalte<br>P.S. Olivers Lieblingscocktail ist der Mai Tai</p>
         </div>
     </div>
 
+    <!-- JavaScript-Einbindung -->
     <script src="js/script.js"></script>
 </body>
 </html>
