--- a/index.html
+++ b/index.html
@@ -6,18 +6,23 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- Navigationsleiste -->
     <nav>
         <a href="index.html">Startseite</a>
         <a href="ueberuns.html">Über uns</a>
     </nav>
 
+    <!-- Wettercontainer -->
     <div id="weatherContainer">
+        <!-- Wetter-Icon -->
         <div class="weather-column" id="weatherIconContainer">
             <img id="weatherIcon" src="" alt="Wetter-Icon" style="width: 160px; height: 160px;">
         </div>
+        <!-- Wetterdaten -->
         <div class="weather-column" id="weatherData">
             <!-- Wetterdaten werden hier durch JavaScript eingefügt -->
         </div>
+        <!-- Stadtauswahl -->
         <div class="weather-column">
             <label for="citySelect" class="city-select-label">Wähle eine Stadt:</label>
             <select id="citySelect">
@@ -30,27 +35,35 @@
         </div>
     </div>
 
+    <!-- Empfehlungssatz -->
     <div id="Empfehlungssatz">
         <h3>Für dein Wetter empfehlen wir dir den folgenden Cocktail:</h3>
     </div>
 
+    <!-- Cocktail-Block -->
     <div id="cocktailBlock" class="hidden">
+        <!-- Cocktail-Titel -->
         <div id="cocktailTitleContainer">
             <h2 id="cocktailTitle" class="hidden">Cocktailname</h2>
         </div>
+        <!-- Cocktail-Bild -->
         <img id="cocktailImage" src="cocktail-image.png" alt="Cocktail Image" class="hidden">
+        <!-- Rezeptdetails -->
         <div id="cocktailRecipeContainer">
             <p id="recipeDetails" class="hidden">Hier steht das Rezept...</p>
         </div>
+        <!-- Button zum Ändern des Cocktails -->
         <div id="cocktailRecipeContainer">
             <button id="changeCocktail">Anderer Cocktail!</button>
         </div>
     </div>
 
+    <!-- Footer -->
     <footer>
         <!-- Footer-Links -->
     </footer>
 
+    <!-- Einbindung des JavaScript -->
     <script src="js/script.js"></script>
 </body>
 </html>
