--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="weatherContainer">
         <!-- Wetter-Icon -->
         <div class="weather-column" id="weatherIconContainer">
-            <img id="weatherIcon" src="img/placeholder.png" alt="Wetter-Icon" style="width: 160px; height: 160px;">
+            <img id="weatherIcon" src="img/default-icon.png" alt="Wetter-Icon" style="width: 160px; height: 160px;">
         </div>
         <!-- Wetterdaten -->
         <div class="weather-column" id="weatherData">
@@ -47,15 +47,16 @@
             <h2 id="cocktailTitle" class="hidden">Cocktailname</h2>
         </div>
         <!-- Cocktail-Bild -->
-        <img id="cocktailImage" src="img/cocktail-placeholder.png" alt="Cocktail Image" class="hidden">
+        <img id="cocktailImage" src="cocktail-image.png" alt="Cocktail Image" class="hidden">
         <!-- Rezeptdetails -->
         <div id="cocktailRecipeContainer">
             <p id="recipeDetails" class="hidden">Hier steht das Rezept...</p>
+                    <!-- Button zum Ändern des Cocktails -->
+            <div id="cocktailButtonContainer">
+                <button id="changeCocktail">Anderer Cocktail!</button>
+            </div>
         </div>
-        <!-- Button zum Ändern des Cocktails -->
-        <div id="changeCocktailContainer">
-            <button id="changeCocktail">Anderer Cocktail!</button>
-        </div>
+        
     </div>
 
     <!-- Footer -->
